--- a/NOVA/Views/Satis/FabrikaStok.cshtml
+++ b/NOVA/Views/Satis/FabrikaStok.cshtml
@@ -313,7 +313,33 @@
                        data-height="720">
                     <thead>
                         <tr id="tst">
-                            <th data-field="RULOKODU" data-sortable="true" data-align="center" data-halign="center" data-formatter="ruloFormatter">RULO KODU</th>
+                            @*<th data-field="RULOKODU" data-sortable="true" data-align="center" data-halign="center" data-formatter="ruloFormatter">RULO KODU</th>
+        <th data-field="KONUM" data-sortable="true" data-align="center" data-halign="center">KONUM</th>
+        <th data-field="RENKKODU" data-sortable="true" data-align="center" data-halign="center">RENKKODU</th>
+        <th data-field="KALINLIK" data-sortable="true" data-align="center" data-halign="center" data-formatter="kalinlikFormatter">KALINLIK</th>
+        <th data-field="GENISLIK" data-sortable="true" data-align="center" data-halign="center">GENISLIK</th>
+        <th data-field="KALITE" data-sortable="true" data-align="center" data-halign="center">KALITE</th>
+        <th data-field="KAPLAMA" data-sortable="true" data-align="center" data-halign="center">KAPLAMA</th>
+        <th data-field="MENSEI" data-sortable="true" data-align="center" data-halign="center">MENSEI</th>
+        <th data-visible="false" data-field="RESERVETARIH" data-align="center" data-sortable="true" data-halign="center">RESERVE TARIH</th>
+        <th data-visible="false" data-field="RESERVEACIKLAMA" data-align="center" data-sortable="true" data-halign="center">RESERVE ACIKLAMA</th>
+        <th data-field="TONAJ" data-sortable="true" data-align="center" data-halign="center" data-formatter="tonFormatter" data-footer-formatter="tonFooterFormatter">TONAJ</th>
+        <th data-field="ADET" data-sortable="true" data-align="center" data-halign="center">ADET</th>
+        @if (ViewBag.OzelYetki != null)
+        {
+            <th data-field="TUTAR" data-align="center" data-sortable="true" data-halign="center" data-formatter="fiyatFormatter">FİYAT</th>
+            <th data-visible="false" data-field="GIRILEN_USD_KUR" data-sortable="true" data-halign="center">KUR</th>
+            <th data-visible="false" data-field="GIR_KUR_HES_USD_FIYAT" data-sortable="true" data-halign="center">GIRILEN KURA GÖRE HESAPLANAN</th>
+        }
+        <th data-visible="false" data-field="STOKSAHASI" data-sortable="true" data-halign="center">STOK SAHASI</th>
+        <th data-field="BANT_GIRIS_TARIH" data-sortable="true" data-halign="center" data-align="center" data-formatter="tarihFormatter">STOĞA GİRİŞ TARİHİ</th>
+        <th data-visible="false" data-field="ISEMRI_TARIH" data-sortable="true" data-halign="center">İŞ EMRİ TARİHİ</th>
+        <th data-visible="false" data-field="IRSALIYENO" data-sortable="true" data-halign="center">İRSALİYE NO</th>
+        <th data-visible="false" data-field="ISEMRINO" data-sortable="true" data-halign="center">İŞ EMRİ NO</th>
+        <th data-visible="false" data-field="BANT_GIRIS_TARIH" data-sortable="true" data-halign="center">ÜRETİLECEK MALZEME ADI</th>
+        <th data-visible="false" data-field="BOBINNO" data-sortable="true" data-halign="center">BOBİN NO</th>
+        <th data-visible="false" data-field="ISEMRIKOD" data-sortable="true" data-halign="center">ÜRETİLECEK MAKİNE</th>*@
+                            <th data-field="RULOKODU" data-sortable="true" data-align="center" data-halign="center">RULO KODU</th>
                             <th data-field="KONUM" data-sortable="true" data-align="center" data-halign="center">KONUM</th>
                             <th data-field="RENKKODU" data-sortable="true" data-align="center" data-halign="center">RENKKODU</th>
                             <th data-field="KALINLIK" data-sortable="true" data-align="center" data-halign="center" data-formatter="kalinlikFormatter">KALINLIK</th>
@@ -321,24 +347,18 @@
                             <th data-field="KALITE" data-sortable="true" data-align="center" data-halign="center">KALITE</th>
                             <th data-field="KAPLAMA" data-sortable="true" data-align="center" data-halign="center">KAPLAMA</th>
                             <th data-field="MENSEI" data-sortable="true" data-align="center" data-halign="center">MENSEI</th>
-                            <th data-visible="false" data-field="RESERVETARIH" data-align="center" data-sortable="true" data-halign="center">RESERVE TARIH</th>
-                            <th data-visible="false" data-field="RESERVEACIKLAMA" data-align="center" data-sortable="true" data-halign="center">RESERVE ACIKLAMA</th>
                             <th data-field="TONAJ" data-sortable="true" data-align="center" data-halign="center" data-formatter="tonFormatter" data-footer-formatter="tonFooterFormatter">TONAJ</th>
                             <th data-field="ADET" data-sortable="true" data-align="center" data-halign="center">ADET</th>
                             @if (ViewBag.OzelYetki != null)
                             {
-                                <th data-field="TUTAR" data-align="center" data-sortable="true" data-halign="center" data-formatter="fiyatFormatter">FİYAT</th>
-                                <th data-visible="false" data-field="GIRILEN_USD_KUR" data-sortable="true" data-halign="center">KUR</th>
-                                <th data-visible="false" data-field="GIR_KUR_HES_USD_FIYAT" data-sortable="true" data-halign="center">GIRILEN KURA GÖRE HESAPLANAN</th>
+                                <th data-field="FIYAT" data-align="center" data-sortable="true" data-halign="center" data-formatter="fiyatFormatter">FİYAT</th>
+                                <th data-visible="false" data-field="KUR" data-sortable="true" data-halign="center">KUR</th>
+                                @*<th data-visible="false" data-field="GIR_KUR_HES_USD_FIYAT" data-sortable="true" data-halign="center">GIRILEN KURA GÖRE HESAPLANAN</th>*@
                             }
-                            <th data-visible="false" data-field="STOKSAHASI" data-sortable="true" data-halign="center">STOK SAHASI</th>
-                            <th data-field="RULOBANTGIRISTARIH" data-sortable="true" data-halign="center" data-align="center" data-formatter="tarihFormatter">STOĞA GİRİŞ TARİHİ</th>
-                            <th data-visible="false" data-field="ISEMRITARIHI" data-sortable="true" data-halign="center">İŞ EMRİ TARİHİ</th>
+                            <th data-field="BANT_GIRIS_TARIH" data-sortable="true" data-halign="center" data-align="center" data-formatter="tarihFormatter">STOĞA GİRİŞ TARİHİ</th>
+                            <th data-visible="false" data-field="ISEMRI_TARIH" data-sortable="true" data-halign="center">İŞ EMRİ TARİHİ</th>
                             <th data-visible="false" data-field="IRSALIYENO" data-sortable="true" data-halign="center">İRSALİYE NO</th>
                             <th data-visible="false" data-field="ISEMRINO" data-sortable="true" data-halign="center">İŞ EMRİ NO</th>
-                            <th data-visible="false" data-field="URETILECEKMALZEMEADI" data-sortable="true" data-halign="center">ÜRETİLECEK MALZEME ADI</th>
-                            <th data-visible="false" data-field="BOBINNO" data-sortable="true" data-halign="center">BOBİN NO</th>
-                            <th data-visible="false" data-field="ISEMRIKOD" data-sortable="true" data-halign="center">ÜRETİLECEK MAKİNE</th>
                         </tr>
                     </thead>
                 </table>
@@ -416,9 +436,9 @@
                 if (!menseifilter.includes(detayli[i].MENSEI)) {
                     menseifilter.push(detayli[i].MENSEI)
                 }
-                if (!kuralFilter.includes(detayli[i].KURAL)) {
-                    kuralFilter.push(detayli[i].KURAL)
-                }
+                //if (!kuralFilter.includes(detayli[i].KURAL)) {
+                //    kuralFilter.push(detayli[i].KURAL)
+                //}
 
             }
             teslimfilter.sort(function (a, b) { return a - b });
@@ -467,19 +487,19 @@
                 option.innerHTML = menseifilter[i];
                 document.getElementById("mensei").appendChild(option);
             }
-            for (let i = 0; i < kuralFilter.length; i++) {
-                var option = document.createElement("option");
-                option.value = kuralFilter[i];
-                if (kuralFilter[i] === "0") {
-                    option.innerHTML = "Hazır Stoklar";
-                } else if (kuralFilter[i] === "1") {
-                    option.innerHTML = "İş Emri Verilen Stoklar";
-                } else {
-                    option.innerHTML = "Üretim Bekleyenler";
-                }
+            //for (let i = 0; i < kuralFilter.length; i++) {
+            //    var option = document.createElement("option");
+            //    option.value = kuralFilter[i];
+            //    if (kuralFilter[i] === "0") {
+            //        option.innerHTML = "Hazır Stoklar";
+            //    } else if (kuralFilter[i] === "1") {
+            //        option.innerHTML = "İş Emri Verilen Stoklar";
+            //    } else {
+            //        option.innerHTML = "Üretim Bekleyenler";
+            //    }
 
-                document.getElementById("kural").appendChild(option);
-            }
+            //    document.getElementById("kural").appendChild(option);
+            //}
 
             $('#filter').select2({ placeholder: "Rulo Kodu" });
             $('#renk').select2({ placeholder: "Renk Kodu" });
@@ -1500,9 +1520,9 @@
     //}
     function tarihFormatter(value, index, row) {
         if (value.length>1) {
-            var gun = value.split('.')[0].padStart(2, '0')
-            var ay = value.split('.')[1].padStart(2, '0')
-            var yil = value.split('.')[2]
+            var yil = value.split('-')[0].padStart(2, '0')
+            var ay = value.split('-')[1].padStart(2, '0')
+            var gun = (value.split('-')[2]).split('T')[0]
             return gun+"."+ay+"."+yil;
         } else {
             return value;
