--- a/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Barcode.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Barcode.cshtml
@@ -166,6 +166,8 @@
                     if (data[0].MIKTAR > 0 || data[0].MIKTAR2 > 0) {
                         var Stok = StokAdlari.filter(x => x.STOK_KODU == data[0].STOK_KODU)[0];
 
+                        SeciliStokKodu = Stok.STOK_KODU;
+
                         $('#MIKTAR').val(data[0].MIKTAR.toFixed(2));
                         $('#MIKTAR2').val(data[0].MIKTAR2.toFixed(2));
                         $('#SERI_NO').val(BarkodNo);
@@ -186,6 +188,10 @@
 
                         TabloButonAyarla(1);
                         MiktarGirisKontrolu();
+
+
+                        $('#STOK_ADLARI').prop("disabled", false);
+                        $('#BarkodButton').prop("disabled", false);
                     }
                     else {
                         //DEPO_UYARI: miktar uyarısı
