--- a/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_BarkodRehber.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_BarkodRehber.cshtml
@@ -42,8 +42,8 @@
                                         <th data-formatter="NullCheck" data-field="SERI_NO" data-halign="center" data-align="center">BARKOD NO</th>
                                         <th data-formatter="MiktarFormatla" data-field="MIKTAR" data-halign="center" data-align="center">MİKTAR 1</th>
                                         <th data-formatter="MiktarFormatla" data-field="MIKTAR2" data-halign="center" data-align="center">MİKTAR 2</th>
-                                        <th data-formatter="KalinlikFormatter" data-field="ACIK1" data-halign="center" data-align="center">KALINLIK</th>
-                                        <th data-formatter="GenislikFormatter" data-field="ACIK2" data-halign="center" data-align="center">GENİŞLİK</th>
+                                        <th data-formatter="KalinlikFormatter" data-field="ACIK2" data-halign="center" data-align="center">KALINLIK</th>
+                                        <th data-formatter="GenislikFormatter" data-field="ACIK1" data-halign="center" data-align="center">GENİŞLİK</th>
                                         <th data-formatter="NullCheck" data-field="ACIK3" data-halign="center" data-align="center">ÜRÜN NO</th>
                                         <th data-formatter="NullCheck" data-field="SERI_NO_3" data-halign="center" data-align="center">KALİTE</th>
                                         <th data-formatter="NullCheck" data-field="SERI_NO_4" data-halign="center" data-align="center">KAPLAMA KALINLIĞI</th>
@@ -76,7 +76,7 @@
         $('#BarkodRehberTableProgress').show();
 
         if (SeciliStokKodu != "") {
-            var ProcUrl = "http://192.168.2.13:83/api/seri/rehber/" + SeciliStokKodu;
+            var ProcUrl = "http://192.168.2.13:83/api/seri/rehber/" + SeciliStokKodu + "/" + 0;
 
             var BarkodNoListesi = [];
 
