--- a/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Partial.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Partial.cshtml
@@ -121,7 +121,7 @@
                                 <div class="col-sm">
                                     <div class="form-label-group outline m-0">
                                         <input type="text" id="SERI_NO_4" class="form-control" autocomplete="off" value="-" disabled />
-                                        <span><label for="SERI_NO_4">KAPLAMA KALINLIĞI</label></span>
+                                        <span><label for="SERI_NO_4">KAPLAMA</label></span>
                                     </div>
                                 </div>
                             </div>
@@ -347,7 +347,7 @@
         var Liste = [];
 
         $.ajax({
-            url: "http://192.168.2.13:83/api/seri/rehber/" + STOK_KODU,
+            url: "http://192.168.2.13:83/api/seri/rehber/" + STOK_KODU + "/" + 0,
             type: 'GET',
             success: function (result) {
                 for (var i = 0; i < result.length; i++) {
@@ -484,6 +484,7 @@
 
             DurumDegisikligi(0);
             $('#STOK_ADLARI').prop("disabled", false);
+            $('#BarkodButton').prop("disabled", false);
 
             $('#DepoTransferTable').bootstrapTable("load", Kayitlar);
         }
@@ -673,6 +674,7 @@
                                 'Girilen Stok Miktarlarını Kontrol Ediniz.',
                                 'error'
                             );
+                            console.log(msg)
                             HideProgress();
                         }
                     });
