--- a/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
@@ -2,6 +2,9 @@
     Layout = "~/Views/Shared/_Layout_common.cshtml";
 }
 <style>
+    html {
+        overflow-y: auto !important;
+    }
     body {
         padding: 0 0 0 4rem !important;
     }
